change slider text

--- a/components/footer.html
+++ b/components/footer.html
@@ -1,8 +1,8 @@
 <footer>
     <div class="footer-container">
         <div class="footer-about">
-            <h2>Kişisel Blog</h2>
-            <p>En güncel içeriklerle bilgi dolu bir blog deneyimi sunuyoruz.</p>
+            <h2>Hüseyin Budak Blog</h2>
+            <p>Yazılım mühendisliği, siber güvenlik, teknoloji ve kişisel deneyimler üzerine paylaşımlar.</p>
         </div>
 
         <div class="footer-links">
@@ -30,7 +30,7 @@
     </div>
 
     <div class="footer-bottom">
-        <p>© <span id="year"></span> Kişisel Blog | <a href="#">Gizlilik Politikası</a></p>
+        <p>© <span id="year"></span> Hüseyin Budak Blog | Tüm hakları saklıdır.</p>
     </div>
 
     <a href="#" class="go-top">↑</a>
